syntax = "proto3";

package com.cognite.beam.proto;

import "google/protobuf/wrappers.proto";

option java_package = "com.cognite.beam.io.dto";
option java_multiple_files = true;

message ThreedNode {
    google.protobuf.Int64Value id = 1;
    google.protobuf.Int64Value model_id = 2;
    google.protobuf.Int64Value revision_id = 3;
    google.protobuf.Int64Value tree_index = 4;
    google.protobuf.Int64Value parent_id = 5;
    google.protobuf.Int64Value depth = 6;
    string name = 7;
    google.protobuf.Int64Value subtree_size = 8;
    repeated google.protobuf.DoubleValue bounding_box_max = 9;
    repeated google.protobuf.DoubleValue bounding_box_min = 10;
    google.protobuf.Int64Value sector_id = 11;
    repeated google.protobuf.Int64Value asset_ids = 12;
    map<string, string> metadata = 13;
}
